Aplicacion funcionando con real time database de firebase

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CasesApp</title>
+  <title>Casos</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/0b44d69a6a.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="./assets/css/animate.css">
+
 </head>
-<body>
+<body class="container animated fadeIn fast">
   <app-root></app-root>
 </body>
 </html>
